# torn-api.rs

./: .gitignore  Cargo.toml  LICENSE  flake.nix
macros/: Cargo.toml
macros/src/: lib.rs
src/: de_util.rs  faction.rs  lib.rs  user.rs
torn-api/: Cargo.toml  build.rs
torn-api-codegen/: Cargo.toml  openapi.json
torn-api-codegen/src/: lib.rs
torn-api-codegen/src/model/: enum.rs  mod.rs  newtype.rs  object.rs  parameter.rs  path.rs  scope.rs  union.rs
torn-api-codegen/src/openapi/: mod.rs  parameter.rs  path.rs  schema.rs  type.rs
torn-api-macros/: Cargo.toml
torn-api-macros/src/: lib.rs
torn-api/benches/: deserialisation_benchmark.rs
torn-api/src/: awc.rs  common.rs  de_util.rs  executor.rs  faction.rs  into_owned.rs  key.rs  lib.rs  local.rs  market.rs  parameters.rs  reqwest.rs  scopes.rs  send.rs  torn.rs  user.rs
torn-api/src/request/: mod.rs  models.rs
torn-key-pool/: Cargo.toml
torn-key-pool/src/: lib.rs  local.rs  postgres.rs  send.rs
