[package]
name = "torn-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "macros" ]

[features]
default = [ "reqwest" ]
reqwest = [ "dep:reqwest" ]
awc = [ "dep:awc" ]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
chrono = { version = "0.4", features = [ "serde" ], default-features = false }
async-trait = "0.1"
thiserror = "1"
num-traits = "0.2"

reqwest = { version = "0.11", default-features = false, features = [ "json" ], optional = true }
awc = { version = "3", default-features = false, optional = true }

macros = { path = "macros" }

[dev-dependencies]
actix-rt = { version = "2.7.0" }
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["test-util", "rt", "macros"] }
tokio-test = "0.4.2"
reqwest = { version = "*", default-features = true }
awc = { version = "*", features = [ "rustls" ] }
