[package]
name = "torn-api-codegen"
authors = ["Pyrit [2111649]"]
version = "0.1.5"
edition = "2021"
description = "Contains the v2 torn API model descriptions and codegen for the bindings"
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
heck = "0.5"
indexmap = { version = "2.9", features = ["serde"] }
quote = "1"
proc-macro2 = { workspace = true }
syn = { workspace = true }
