[package]
name = "torn-api-macros"
version = "0.1.1"
edition = "2021"
authors = ["Pyrit [2111649]"]
license = "MIT"
repository = "https://github.com/TotallyNot/torn-api.rs.git"
homepage = "https://github.com/TotallyNot/torn-api.rs.git"
description = "Macros implementation of #[derive(ApiCategory)]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "extra-traits" ] }
proc-macro2 = "1"
quote = "1"
convert_case = "0.5"
