[package]
name = "torn-api-macros"
version = "0.2.0"
edition = "2021"
authors = ["Pyrit [2111649]"]
license = "MIT"
repository = "https://github.com/TotallyNot/torn-api.rs.git"
homepage = "https://github.com/TotallyNot/torn-api.rs.git"
description = "Macros implementation of #[derive(ApiCategory)]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = [ "parsing" ] }
proc-macro2 = "1"
quote = "1"
convert_case = "0.5"
