[package]
name = "torn-api"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json = { workspace = true }
bon = "3.6"
bytes = "1"
http = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "brotli",
] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
torn-api-codegen = { path = "../torn-api-codegen" }
syn = { workspace = true, features = ["parsing"] }
proc-macro2 = { workspace = true }
prettyplease = "0.2"
