[package]
name = "torn-key-pool"
version = "0.5.1"
edition = "2021"
authors = ["Pyrit [2111649]"]
license = "MIT"
repository = "https://github.com/TotallyNot/torn-api.rs.git"
homepage = "https://github.com/TotallyNot/torn-api.rs.git"
description = "A generalised API key pool for torn-api"

[features]
default = [ "postgres", "tokio-runtime" ]
postgres = [ "dep:sqlx", "dep:chrono", "dep:indoc", "dep:serde" ]
reqwest = [ "dep:reqwest", "torn-api/reqwest" ]
awc = [ "dep:awc", "torn-api/awc" ]
tokio-runtime = [ "dep:tokio", "dep:rand" ]
actix-runtime = [ "dep:actix-rt", "dep:rand" ]

[dependencies]
torn-api = { path = "../torn-api", default-features = false, version = "0.5.5" }
async-trait = "0.1"
thiserror = "1"

sqlx = { version = "0.6", features = [ "postgres", "chrono", "json" ], optional = true }
serde = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
indoc = { version = "1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["time"] }
actix-rt = { version = "2", optional = true, default-features = false }
rand = { version = "0.8", optional = true }
futures = "0.3"

reqwest = { version = "0.11", default-features = false, features = [ "json" ], optional = true }
awc = { version = "3", default-features = false, optional = true }

[dev-dependencies]
torn-api = { path = "../torn-api", features = [ "reqwest" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
tokio = { version = "1.24.2", features = ["test-util", "rt", "macros"] }
tokio-test = "0.4.2"
reqwest = { version = "0.11", default-features = true }
awc = { version = "3", features = [ "rustls" ] }
