[package]
name = "torn-key-pool"
version = "1.1.0"
edition = "2021"
authors = ["Pyrit [2111649]"]
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "A generalised API key pool for torn-api"

[features]
default = ["postgres", "tokio-runtime"]
postgres = ["dep:sqlx", "dep:chrono", "dep:indoc"]
tokio-runtime = ["dep:tokio", "dep:rand", "dep:tokio-stream"]

[dependencies]
torn-api = { path = "../torn-api", default-features = false, version = "1.0.1" }
thiserror = "2"

sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "json",
    "derive",
], optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", optional = true }
indoc = { version = "2", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
    "time",
] }
tokio-stream = { version = "0.1", optional = true, default-features = false, features = [
    "time",
] }
rand = { version = "0.9", optional = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "http2",
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
torn-api = { path = "../torn-api" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.42", features = ["rt"] }
reqwest = { version = "0.12", default-features = true }
